--- a/src/styles/base/_settings.scss
+++ b/src/styles/base/_settings.scss
@@ -2,9 +2,16 @@
 //only styles you reuse
 
 //Colors
+$bright-blue: #0090C4;
+$dark-blue: #364051;
+$dark-grey: #333;
+$grey: #666;
+$off-white: #f7f7f7;
 
-
-//Spacing/Font-size
+// Font size
+$font-size-large: 1.8rem;
+$font-size-small: 1.4rem;
+//Spacing
 $s-size: 1.2rem;
 $m-size: 1.6rem;
 $l-size: 3.2rem;
